@@ -282,6 +282,11 @@ AjTalk.Compiler compiling Squeak Object.st to Program.js
 2011-10-09
 1 add: 2 -> Number(1).$add_(2)  Same for Strings
 Fixed precedence in MessageExpression.AsString
+Operators ->, =, ~= compiled as names
+new, class variable names as __new__, __class__
+@ as operator with name
+false, true as target, compiled as Boolean(false), Boolean(true)
+Compile Object.st to javascript and run in node (no syntax error)
 
 Angel "Java" Lopez
 http://www.ajlopez.com/en
